--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "files": [
         "planetdrag.ts",
         "brushscattermatrix.ts",
+        "linegraph.ts"
         "global.d.ts"
     ]
 }
