--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "ES6",
+        "target": "ES2020",
         "module": "ES6",
         "strict": true,
         "removeComments": false,
@@ -12,6 +12,7 @@
         "planetdrag.ts",
         "brushscattermatrix.ts",
         "linegraph.ts",
-        "global.d.ts"
+        "global.d.ts",
+        "animatedbarchart.ts"
     ]
 }
